# multimedia-framework

./: .gitignore  CMakeLists.txt  README.md  vulkaninfo.txt
include/: audio-capture.h  audio-codec.h  audio-playback.h  video-capture.h  video-decode.h  video-encode.h  video-playback.h
source/: CMakeLists.txt  audio-capture-alsa.c  audio-capture-alsa.h  audio-capture-pipewire.h  audio-capture-pulseaudio.h  audio-capture.c  audio-codec-ffmpeg.c  audio-codec-ffmpeg.h  audio-codec-gstreamer.c  audio-codec-wavpack.h  audio-codec.c  audio-playback.c  video-capture-ffmpeg.h  video-capture-pipewire.c  video-capture-xcb.c  video-capture.c  video-encode-ffmpeg.c  video-encode-gstreamer.c  video-encode-gstreamer.h  video-encode-jpeg.h  video-encode-turbojpeg.c  video-encode-turbojpeg.h  video-encode-x264.c  video-encode.c  video-playback-gtk.c  video-playback-gtk.h  video-playback-render-opengles-egl.h  video-playback-render-opengles.h  video-playback-render-vulkan.h  video-playback-render.h  video-playback-wayland.c  video-playback-xcb.h  video-playback.c  video-stream-srt.h  video-stream.c
source/audio-capture/: audio-capture-pipewire.c  audio-capture-pulseaudio.c  audio-codec-gstreamer.h  audio-codec-wavpack.c
source/audio-playback/: audio-playback-pipewire.c  audio-playback-pipewire.h  audio-playback-pulseaudio.c  audio-playback-pulseaudio.h
source/shaders/: vertex.glsl
source/video-capture/: video-capture-drm.c  video-capture-drm.h  video-capture-xcb.h
source/video-encode/: video-encode-ffmpeg.h  video-encode-jpeg.c  video-encode-onevpl.c  video-encode-onevpl.h  video-encode-vaapi.c  video-encode-vaapi.h  video-encode-vulkan.c  video-encode-vulkan.h  video-encode-x264.h
source/video-playback/: video-playback-qt.cpp  video-playback-qt.hpp  video-playback-render-opengles-egl.c  video-playback-render-opengles.c  video-playback-render-vulkan.c  video-playback-render.c  video-playback-wayland.h  video-playback-xcb.c
source/video-playback/shaders/: fragment.glsl
source/video-stream/: video-stream-srt.c
test/: CMakeLists.txt  audio-capture-test.c  audio-playback-test.c  video-capture-test.c  video-encode-test.c  video-playback-test.c
